@@ -46,6 +46,7 @@ typedef enum { CURSOR_UNDERLINE, CURSOR_VERTICAL, CURSOR_BOX } ITermCursorType;
 	IBOutlet NSButton *middleButtonPastesFromClipboard;
     IBOutlet id hideTab;
     IBOutlet id promptOnClose;
+    IBOutlet id onlyWhenMoreTabs;
     IBOutlet NSButton *focusFollowsMouse;
 	IBOutlet NSTextField *wordChars;
 	IBOutlet NSButton *enableBonjour;
@@ -70,6 +71,7 @@ typedef enum { CURSOR_UNDERLINE, CURSOR_VERTICAL, CURSOR_BOX } ITermCursorType;
     BOOL defaultHideTab;
     int defaultTabViewType;
     BOOL defaultPromptOnClose;
+    BOOL defaultOnlyWhenMoreTabs;
     BOOL defaultFocusFollowsMouse;
 	BOOL defaultEnableBonjour;
 	BOOL defaultEnableGrowl;
@@ -113,6 +115,7 @@ typedef enum { CURSOR_UNDERLINE, CURSOR_VERTICAL, CURSOR_BOX } ITermCursorType;
 - (int) windowStyle;
 - (void) setTabViewType: (NSTabViewType) type;
 - (BOOL) promptOnClose;
+- (BOOL) onlyWhenMoreTabs;
 - (BOOL) focusFollowsMouse;
 - (BOOL) enableBonjour;
 - (BOOL) enableGrowl;
